--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>FSE</title>
+  <title>FSE - Management App</title>
 </head>
 
 <body>
@@ -60,27 +60,16 @@
   <div id="overlays"></div>
   <div id="root"></div>
 
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-
   <!-- JavaScript Libraries -->
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/lib/wow/wow.min.js"></script>
-  <script src="assets/lib/easing/easing.min.js"></script>
-  <script src="assets/lib/waypoints/waypoints.min.js"></script>
-  <script src="assets/lib/owlcarousel/owl.carousel.min.js"></script>
-  <script src="assets/lib/tempusdominus/js/moment.min.js"></script>
-  <script src="assets/lib/tempusdominus/js/moment-timezone.min.js"></script>
-  <script src="assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script src="assets/lib/wow/wow.min.js" defer></script>
+  <script src="assets/lib/easing/easing.min.js" defer></script>
+  <script src="assets/lib/waypoints/waypoints.min.js" defer></script>
+  <script src="assets/lib/owlcarousel/owl.carousel.min.js" defer></script>
+  <script src="assets/lib/tempusdominus/js/moment.min.js" defer></script>
+  <script src="assets/lib/tempusdominus/js/moment-timezone.min.js" defer></script>
+  <script src="assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js" defer></script>
 
   <!-- Template Javascript -->
   <script src="js/main.js"></script>
