--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
   <script src="assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js" defer></script>
 
   <!-- Template Javascript -->
-  <script src="js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
